@@ -1,3 +1,8 @@
+2008-05-23  Tor Lillqvist  <tml@novell.com>
+
+	* gdk/win32/gdkwindow-win32.c (update_style_bits): Don't do
+	anything if style doesn't change. Improve debugging output.
+
 2008-05-23  Michael Natterer  <mitch@gimp.org>
 
 	* perf/widgets.h
@@ -150,8 +155,9 @@
 
 2008-05-20 14:27:34  Tim Janik  <timj@imendio.com>
 
-	* reverted recent unapproved changes by Yair Hershkovitz, regarding:
-	Bug 503071 – Application direction changes to right to left even if theres no translation.
+	* reverted recent unapproved changes by Yair Hershkovitz,
+	regarding: Bug 503071 – Application direction changes to right
+	to left even if theres no translation.
 
 2008-05-19  Richard Hult  <richard@imendio.com>
 
